--- a/web-master/examples/aframe/portal/index.html
+++ b/web-master/examples/aframe/portal/index.html
@@ -78,6 +78,7 @@
         <!-- Credit to Poly by Google for the model: https://poly.google.com/view/0fVRHo65E-j -->
         <!--        <a-asset-item id="unicornModel" src="unicorn.glb"></a-asset-item>-->
         <a-asset-item id="burgerModel" src="Hamburger_01.glb"></a-asset-item>
+        <a-asset-item id="FTC" src="Hamburger_01.glb"></a-asset-item>
     </a-assets>
 
     <a-camera
