--- a/web-master/examples/aframe/placeground/index.html
+++ b/web-master/examples/aframe/placeground/index.html
@@ -15,6 +15,43 @@
     <!-- 8thWall Web - Replace the app key here with your own app key -->
     <script async src="//apps.8thwall.com/xrweb?appKey=XXXXXXXX"></script>
 
+<!--    <script>-->
+<!--      // Component that places trees where the ground is clicked-->
+<!--      AFRAME.registerComponent('tap-place', {-->
+<!--        init: function() {-->
+<!--          const ground = document.getElementById('ground')-->
+<!--          ground.addEventListener('click', event => {-->
+<!--            // Create new entity for the new object-->
+<!--            const newElement = document.createElement('a-entity')-->
+
+<!--            // The raycaster gives a location of the touch in the scene-->
+<!--            const touchPoint = event.detail.intersection.point-->
+<!--            newElement.setAttribute('position', touchPoint)-->
+
+<!--            const randomYRotation = Math.random() * 360-->
+<!--            newElement.setAttribute('rotation', '0 ' + randomYRotation + ' 0')-->
+
+<!--            newElement.setAttribute('visible', 'false')-->
+<!--            newElement.setAttribute('scale', '0.0001 0.0001 0.0001')-->
+
+<!--            newElement.setAttribute('gltf-model', '#treeModel')-->
+<!--            this.el.sceneEl.appendChild(newElement)-->
+
+<!--            newElement.addEventListener('model-loaded', () => {-->
+<!--              // Once the model is loaded, we are ready to show it popping in using an animation-->
+<!--              newElement.setAttribute('visible', 'true')-->
+<!--              newElement.setAttribute('animation', {-->
+<!--                property: 'scale',-->
+<!--                to: '0.01 0.01 0.01',-->
+<!--                easing: 'easeOutElastic',-->
+<!--                dur: 800,-->
+<!--              })-->
+<!--            })-->
+<!--          })-->
+<!--        }-->
+<!--      })-->
+<!--    </script>-->
+
     <script>
       // Component that places trees where the ground is clicked
       AFRAME.registerComponent('tap-place', {
@@ -34,7 +71,7 @@
             newElement.setAttribute('visible', 'false')
             newElement.setAttribute('scale', '0.0001 0.0001 0.0001')
 
-            newElement.setAttribute('gltf-model', '#treeModel')
+            newElement.setAttribute('gltf-model', '#KTC')
             this.el.sceneEl.appendChild(newElement)
 
             newElement.addEventListener('model-loaded', () => {
@@ -66,6 +103,7 @@
       <a-assets>
         <!-- Credit to Poly by Google for the model: https://poly.google.com/view/6pwiq7hSrHr -->
         <a-asset-item id="treeModel" src="tree.glb"></a-asset-item>
+        <a-asset-item id="KTC" src="KTC.glb"></a-asset-item>
       </a-assets>
 
       <!-- The raycaster will emit mouse events on scene objects specified with the cantap class -->
