--- a/web-master/examples/aframe/placeground/index.html
+++ b/web-master/examples/aframe/placeground/index.html
@@ -13,7 +13,7 @@
     <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
 
     <!-- 8thWall Web - Replace the app key here with your own app key -->
-    <script async src="//apps.8thwall.com/xrweb?appKey=XXXXXXXX"></script>
+    <script async src="//apps.8thwall.com/xrweb?appKey=yQuHDZG37SGLBSHGZuBN9ZvLSIzCbSnU95VbYEfCAW1AtPQxxoqF5IT7QTZwuqB5UmHMBp"></script>
 
 <!--    <script>-->
 <!--      // Component that places trees where the ground is clicked-->
