--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -4,16 +4,25 @@
     <meta charset="utf-8">
     <title>place</title>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script>
+        var box = document.querySelector("#box");
+        box.addEventListener("click", function() {
+            console.log("我被点击了！")
+        });
+    </script>
 </head>
 
 
 <body>
 <a-scene>
-    <a-box position="0 10 -10" color="green"></a-box>
-    <a-assets>
-        <a-asset-item id="KTC" src="KTC.gltf"></a-asset-item>
-    </a-assets>
-    <a-entity gltf-model="#KTC"></a-entity>
+    <!--    <a-box position="0 10 -10" color="green"></a-box>-->
+    <!--    <a-assets>-->
+    <!--        <a-asset-item id="KTC" src="KTC.gltf"></a-asset-item>-->
+    <!--    </a-assets>-->
+    <!--    <a-entity gltf-model="#KTC"></a-entity>-->
+    <a-box id="box" position="-43.006 1.998 -34.69" scale="10 10 10" rotation="0 45 0" color="#4CC3D9" visible="true" material="color:#b5a671" geometry="primitive:box">
+
+    </a-box>
 </a-scene>
 
 </body>
