--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -15,14 +15,15 @@
 
 <body>
 <a-scene>
+    <a-camera>
+        <a-cursor color="#00FF11" position="0 0 -1"></a-cursor>
+    </a-camera>
     <!--    <a-box position="0 10 -10" color="green"></a-box>-->
     <!--    <a-assets>-->
     <!--        <a-asset-item id="KTC" src="KTC.gltf"></a-asset-item>-->
     <!--    </a-assets>-->
     <!--    <a-entity gltf-model="#KTC"></a-entity>-->
-    <a-box id="box" position="-43.006 1.998 -34.69" scale="10 10 10" rotation="0 45 0" color="#4CC3D9" visible="true" material="color:#b5a671" geometry="primitive:box">
-
-    </a-box>
+    <a-box id="box" position="-43.006 1.998 -34.69" scale="10 10 10" rotation="0 45 0" color="#4CC3D9" visible="true" material="color:#b5a671" geometry="primitive:box"></a-box>
 </a-scene>
 
 </body>
