--- a/AFrame/wtv.html
+++ b/AFrame/wtv.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <title>Animating on Events - A-Frame</title>
+    <meta name="description" content="Hello, WebVR! • A-Frame">
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
+    <script>
+        let el = document.getElementById("box")
+        el.addEventListener('click', function () {
+            window.location.href = 'https://google.com';
+        });
+        AFRAME.registerComponent('link', {
+            schema: {default: ''},
+
+            init: function () {
+                var url = this.data;
+                this.el.addEventListener('click', function () {
+                    window.location.href = url;
+                });
+            }
+        });
+    </script>
 </head>
 <body>
+<a-scene background="color: #FAFAFA" environment="preset: forest">
+    <a-entity id="mouseCursor" cursor="rayOrigin: mouse" raycaster="objects: #box"></a-entity>
 
+    <a-entity id="box" geometry="primitive: box" material="color: red" position="0 1.8 -3" rotation="0 30 0"
+              animation__mouseenter="property: components.material.material.color; type: color; from: red; to: blue; startEvents: mouseenter; dur: 500"
+              animation__mouseleave="property: components.material.material.color; type: color; from: blue; to: red; startEvents: mouseleave; dur: 500"
+
+    >
+    </a-entity>
+</a-scene>
 </body>
 </html>
