--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -19,7 +19,7 @@
     <a-assets>
         <a-asset-item id="SMALL" src="SMALL.gltf"></a-asset-item>
     </a-assets>
-    <a-entity gltf-model="#KTC"></a-entity>
+    <a-entity gltf-model="#SMALL"></a-entity>
 
 </a-scene>
 
