--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -15,11 +15,12 @@
 
 <body>
 <a-scene>
+    <a-entity id="camera" camera position="1 1.5 1" rotation="25 180 0" look-controls cursor="rayOrigin: mouse"></a-entity>
     <a-entity id="camera" camera position="-1 1.5 -1" rotation="25 80 0" look-controls cursor="rayOrigin: mouse"></a-entity>
     <a-assets>
         <a-asset-item id="SMALL" src="SMALL.gltf"></a-asset-item>
     </a-assets>
-    <a-entity gltf-model="#SMALL"></a-entity>
+    <a-entity gltf-model="#SMALL" rotation="25 80 0"></a-entity>
 
 </a-scene>
 
