--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -5,9 +5,9 @@
     <title>place</title>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     <script>
-        var box = document.querySelector("#box");
+        var box = document.querySelector("#SMALL");
         box.addEventListener("click", function () {
-            // console.log("我被点击了！")
+            console.log("我被点击了！")
         });
     </script>
 </head>
