--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -17,7 +17,7 @@
 <a-scene>
     <a-entity id="camera" camera position="1 1.5 1" rotation="25 180 0" look-controls cursor="rayOrigin: mouse"></a-entity>
     <a-assets>
-        <a-asset-item id="SMALL" src="SMALL.gltf"></a-asset-item>
+        <a-asset-item id="SMALL" src="KIT_s.gltf"></a-asset-item>
     </a-assets>
     <a-entity gltf-model="#SMALL" rotation="0 170 0"></a-entity>
 
