--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <title>place</title>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     <script>
-        var box = document.querySelector("#SMALL");
-        box.addEventListener("click", function () {
-            console.log("我被点击了！")
-        });
+//         var box = document.querySelector("#SMALL");
+//         box.addEventListener("click", function () {
+//             console.log("我被点击了！")
+//         });
     </script>
 </head>
 
