--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -4,22 +4,60 @@
     <title>place</title>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     <script>
-//         var box = document.querySelector("#SMALL");
-//         box.addEventListener("click", function () {
-//             console.log("我被点击了！")
-//         });
+        //         var box = document.querySelector("#SMALL");
+        //         box.addEventListener("click", function () {
+        //             console.log("我被点击了！")
+        //         });
+    </script>
+    <script>
+        AFRAME.registerComponent('navigate-on-click', {
+            schema: {
+                url: {default: ''}
+            },
+
+            init: function () {
+                var data = this.data;
+                var el = this.el;
+
+                el.addEventListener('click', function () {
+                    window.location.href = data.url;
+                });
+            }
+        });
     </script>
 </head>
 
 
 <body>
 <a-scene>
-    <a-entity id="camera" camera position="1 1.5 1" rotation="25 180 0" look-controls cursor="rayOrigin: mouse"></a-entity>
+    <a-entity id="camera" camera position="1 1.5 1" look-controls cursor="rayOrigin: mouse"></a-entity>
     <a-assets>
-        <a-asset-item id="SMALL" src="KIT_s.gltf"></a-asset-item>
+        <a-asset-item id="ALL" src="GLTF/ALL.gltf"></a-asset-item>
+        <a-asset-item id="SETs" src="GLTF/KIT_s.gltf"></a-asset-item>
+        <a-asset-item id="DBur" src="GLTF/DoubleBurger.gltf"></a-asset-item>
+        <a-asset-item id="CNug" src="GLTF/ChickenNuggets.gltf"></a-asset-item>
+        <a-asset-item id="CBur" src="GLTF/CheeseBurger.gltf"></a-asset-item>
     </a-assets>
-    <a-entity gltf-model="#SMALL" rotation="0 170 0"></a-entity>
 
+<!--    <a-entity gltf-model="#ALL" id="ALL_E" position="0 0 0">-->
+<!--        <a-entity light="type: directional; color: #EEE; intensity: 0.2" position="0 10 2"></a-entity>-->
+<!--        <a-entity light="type: spot; color: #EEE; intensity: 0.2" position="0 10 -5"></a-entity>-->
+<!--        <a-entity light="type: ambient; color: #FFF; intensity: 1"></a-entity>-->
+<!--&lt;!&ndash;        <a-entity gltf-model="#CBur" id="CBur_E" rotation="0 265 0" position="1 -0.008 0.2"></a-entity>&ndash;&gt;-->
+<!--    </a-entity>-->
+
+    <a-entity gltf-model="#SETs" id="SETs_E" position="0 0 0">
+        <a-entity light="type: directional; color: #EEE; intensity: 0.2" position="0 10 2"></a-entity>
+        <a-entity light="type: spot; color: #EEE; intensity: 0.2" position="0 10 -5"></a-entity>
+        <a-entity light="type: ambient; color: #FFF; intensity: 1"></a-entity>
+        <a-image src="img/img (1).jpg" position="1.12 1.33 0" height=".17" width=".34" navigate-on-click="url: img1.html"></a-image>
+        <a-image src="img/img (2).jpg" position="1.12 1.485 0" height=".17" width=".34" navigate-on-click="url: img2.html"></a-image>
+        <a-image src="img/img (3).jpg" position="1.12 1.64 0" height=".17" width=".34" navigate-on-click="url: img3.html"></a-image>
+        <a-image src="img/img (4).jpg" position="1.12 1.795 0" height=".17" width=".34" navigate-on-click="url: img4.html"></a-image>
+    </a-entity>
+
+
+</a-scene>
 </a-scene>
 
 </body>
