--- a/AFrame/map.html
+++ b/AFrame/map.html
@@ -22,7 +22,7 @@
         }
     </style>
     <script type="text/javascript"
-            src="http://api.map.baidu.com/api?v=3.0&ak=CqubwDmuDc6oFRXAZoAkiHdqagQpreM0"></script>
+            src="https://api.map.baidu.com/api?v=3.0&ak=CqubwDmuDc6oFRXAZoAkiHdqagQpreM0"></script>
     <title>获取指定的全景图</title>
 </head>
 <body>
