--- a/AFrame/place.html
+++ b/AFrame/place.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
+<!--    <style type="text/css">-->
+<!--        body, html {-->
+<!--            width: 100%;-->
+<!--            height: 100%;-->
+<!--            margin: 0;-->
+<!--            font-family: "微软雅黑";-->
+<!--        }-->
+
+<!--        #panorama {-->
+<!--            width: 100%;-->
+<!--            height: 500px;-->
+<!--        }-->
+
+<!--        #result {-->
+<!--            width: 100%;-->
+<!--            font-size: 12px;-->
+<!--        }-->
+<!--    </style>-->
     <title>Tap to place</title>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script type="text/javascript"
+            src="https://api.map.baidu.com/api?v=3.0&ak=CqubwDmuDc6oFRXAZoAkiHdqagQpreM0"></script>
+    <script>
+        AFRAME.registerComponent('navigate-on-click', {
+            schema: {
+                url: {default: ''}
+            },
+
+            init: function () {
+                var data = this.data;
+                var el = this.el;
+
+                el.addEventListener('click', function () {
+                    window.location.href = data.url;
+                });
+            }
+        });
+    </script>
     <script>
         // Component that places trees where the ground is clicked
         AFRAME.registerComponent('tap-place', {
@@ -35,6 +72,7 @@
                             easing: 'easeOutElastic',
                             dur: 800,
                         })
+                        newElement.setAttribute('navigate-on-click', 'url: index.html')
                     })
                 }, {once: true})
             }
@@ -43,6 +81,13 @@
 </head>
 
 <body>
+<!--<div id="panorama"></div>-->
+<!--<div id="result">-->
+<!--    <input id="idBMap" name="name" type="text"/>-->
+<!--    <button id="setPanoramaByLocation">按经纬度展示全景</button>-->
+<!--    <button id="setPanoramaById">按全景Id展示全景</button>-->
+<!--    <button id="alertId" οnclick="test()">显示ID</button>-->
+<!--</div>-->
 <!-- We must add the tap-place component to the scene so it has an effect -->
 <a-scene
         xrweb
@@ -50,11 +95,11 @@
         xrextras-almost-there
         xrextras-loading
         xrextras-runtime-error>
-
+    <a-sky src="img/v23.jpg" rotation="0 -130 0"></a-sky>
     <!-- We can define assets here to be loaded when A-Frame initializes -->
     <a-assets>
         <!-- Credit to Poly by Google for the model: https://poly.google.com/view/6pwiq7hSrHr -->
-<!--        <a-asset-item id="treeModel" src="tree.glb"></a-asset-item>-->
+        <!--        <a-asset-item id="treeModel" src="tree.glb"></a-asset-item>-->
         <a-asset-item id="KTC" src="GLTF/ALL.gltf"></a-asset-item>
     </a-assets>
 
@@ -85,5 +130,37 @@
             position="0 -1 0">
     </a-entity>
 </a-scene>
+<!--<script>-->
+<!--    function test() {-->
+<!--        //获取 输入框的值-->
+<!--        alert(document.getElementById("idBMap").value);-->
+<!--    }-->
+<!--</script>-->
+</body>
+</html>
+<!--<script type="text/javascript">-->
+<!--    var map = new BMap.Map('panorama');-->
+<!--    map.centerAndZoom(new BMap.Point(120.305456, 31.570037), 12);-->
+<!--    map.addTileLayer(new BMap.PanoramaCoverageLayer());-->
+
+<!--    var panorama = new BMap.Panorama('panorama');-->
+<!--    panorama.setPov({heading: -40, pitch: 6});-->
+
+<!--    panorama.setOptions({-->
+<!--        navigationControl: false,-->
+<!--        linksControl: false,-->
+<!--        indoorSceneSwitchControl: false,-->
+<!--        albumsControl: false,-->
+<!--    });-->
+
+<!--    panorama.setId("09000300121710141148130107I");//根据全景id展示全景图-->
+
+<!--    // document.getElementById("setPanoramaByLocation").onclick = function () {-->
+<!--    //     panorama.setPosition(new BMap.Point(120.320032, 31.589666)); //根据经纬度坐标展示全景图-->
+<!--    // };-->
+<!--    // document.getElementById("setPanoramaById").onclick = function () {-->
+<!--    //     panorama.setId(document.getElementById("idBMap").value);//根据全景id展示全景图-->
+<!--    // };-->
+<!--</script>-->
 </body>
 </html>
