--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -4,6 +4,10 @@
     <title>place</title>
     <link rel="stylesheet" type="text/css" href="CSS/index.css"/>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.2.4.min.js"
+            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
     <script src="JS/index.js"></script>
     <script>
         AFRAME.registerComponent('navigate-on-click', {
