--- a/AFrame/AR.html
+++ b/AFrame/AR.html
@@ -72,7 +72,7 @@
          xrextras-runtime-error>
     <a-assets>
         <a-asset-item id="KTC"
-                      src="https://github.com/JackenMo/JackenMo.github.io/tree/master/AFrame/GLTF/ALL.gltf"></a-asset-item>
+                      src="GLTF/ALL.gltf"></a-asset-item>
     </a-assets>
     <!-- create your content here. just a box for now -->
     <a-box position='0 0.5 0' material='opacity: 0.8;'></a-box>
