--- a/AFrame/place1.html
+++ b/AFrame/place1.html
@@ -17,7 +17,7 @@
                 var data = this.data;
                 var el = this.el;
 
-                el.addEventListener('click', function () {
+                el.addEventListener('touchend', function () {
                     window.location.href = data.url;
                 });
             }
