--- a/AFrame/AR.html
+++ b/AFrame/AR.html
@@ -78,7 +78,7 @@
                       src="GLTF/ALL.gltf"></a-asset-item>
     </a-assets>
     <!-- create your content here. just a box for now -->
-    <a-box position='0 0.5 0' material='opacity: 0.8;'></a-box>
+<!--    <a-box position='0 0.5 0' material='opacity: 0.8;'></a-box>-->
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera></a-marker-camera>
     <a-entity id="camera" camera position="0 0 0" look-controls cursor="rayOrigin: mouse"></a-entity>
