--- a/AFrame/choose.html
+++ b/AFrame/choose.html
@@ -5,13 +5,24 @@
     <title>Title</title>
     <script>
     </script>
+    <style>
+        a{
+            text-decoration:none;
+        }
+    </style>
 </head>
 <body>
 <div>
     <form>
         <a href="place1.html">
-            <button type="button">place1</button>
-        </a>
+            <button style="height:5rem; width:10rem; font-size: 3rem" type="button">place1</button>
+        </a><br/><br/>
+        <a href="place2.html">
+            <button style="height:5rem; width:10rem; font-size: 3rem" type="button">place2</button>
+        </a><br/><br/>
+        <a href="AR.html">
+            <button style="height:5rem; width:10rem; font-size: 3rem" type="button">AR</button>
+        </a><br/><br/>
     </form>
 </div>
 </body>
