--- a/AFrame/wtv.html
+++ b/AFrame/wtv.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Animating on Events - A-Frame</title>
-    <meta name="description" content="Hello, WebVR! • A-Frame">
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-environment-component@1.1.0/dist/aframe-environment-component.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-widht, initial-scale=1.0, suer-scalable=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <title>Title</title>
     <script>
-        let el = document.getElementById("box")
-        el.addEventListener('click', function () {
-            window.location.href = 'https://google.com';
-        });
-        AFRAME.registerComponent('link', {
-            schema: {default: ''},
-
-            init: function () {
-                var url = this.data;
-                this.el.addEventListener('click', function () {
-                    window.location.href = url;
-                });
-            }
-        });
+        window.onload = function () {
+            function w() {
+                var r = document.documentElement;
+                var a = r.getBoundingClientRect().width;
+                if (a > 750) {
+                    a = 750;
+                }
+                rem = a / 7.5;
+                r.style.fontSize = rem + 'px';
+            };
+            var t;
+            w();
+            window.addEventListener('resize', function () {
+                clearTimeout(t);
+                t = setTimeout(w, 300)
+            }, false);
+        }
     </script>
 </head>
-<body>
-<a-scene background="color: #FAFAFA" environment="preset: forest">
-    <a-entity id="mouseCursor" cursor="rayOrigin: mouse" raycaster="objects: #box"></a-entity>
-
-    <a-entity id="box" geometry="primitive: box" material="color: red" position="0 1.8 -3" rotation="0 30 0"
-              animation__mouseenter="property: components.material.material.color; type: color; from: red; to: blue; startEvents: mouseenter; dur: 500"
-              animation__mouseleave="property: components.material.material.color; type: color; from: blue; to: red; startEvents: mouseleave; dur: 500"
-    >
-    </a-entity>
-</a-scene>
+<body style='margin : 0px; padding: 0px; overflow: hidden;'>
+<div>
+    <form>
+        <a href="place1.html">
+            <button type="button">place1</button>
+        </a>
+    </form>
+</div>
 </body>
 </html>
