--- a/AFrame/AR.html
+++ b/AFrame/AR.html
@@ -17,7 +17,7 @@
                 var data = this.data;
                 var el = this.el;
 
-                el.addEventListener('click', function () {
+                el.addEventListener('touchstart', function () {
                     setTimeout(
                         function () {
                             window.location.href = data.url;//事件处理
