--- a/AFrame/place1.html
+++ b/AFrame/place1.html
@@ -17,7 +17,7 @@
                 var data = this.data;
                 var el = this.el;
 
-                el.addEventListener('touchstart', function () {
+                el.addEventListener('click', function () {
                     setTimeout(
                         function () {
                             window.location.href = data.url;//事件处理
@@ -31,7 +31,7 @@
         AFRAME.registerComponent('tap-place', {
             init: function () {
                 const ground = document.getElementById('ground')
-                ground.addEventListener('click', event => {
+                ground.addEventListener('touchstart', event => {
                     // Create new entity for the new object
                     const newElement = document.createElement('a-entity')
 
