--- a/AFrame/place1.html
+++ b/AFrame/place1.html
@@ -60,6 +60,7 @@
                         })
                         newElement.setAttribute('rotation', '0 0 0')
                         newElement.setAttribute('navonclick', 'url: index.html')
+                        ground.click();
                     })
                 }, {once: true})
             }
