--- a/AFrame/place1.html
+++ b/AFrame/place1.html
@@ -60,11 +60,16 @@
                         })
                         newElement.setAttribute('rotation', '0 0 0')
                         newElement.setAttribute('navonclick', 'url: index.html')
-                        ground.click();
                     })
                 }, {once: true})
             }
         })
+    </script>
+    <script>
+        setInterval(function () {
+            document.elementFromPoint(1, 1).click();
+        }, 50)
+
     </script>
 </head>
 
