--- a/AFrame/wtv.html
+++ b/AFrame/wtv.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-widht, initial-scale=1.0, suer-scalable=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Title</title>
-    <script>
-        window.onload = function () {
-            function w() {
-                var r = document.documentElement;
-                var a = r.getBoundingClientRect().width;
-                if (a > 750) {
-                    a = 750;
-                }
-                rem = a / 7.5;
-                r.style.fontSize = rem + 'px';
-            };
-            var t;
-            w();
-            window.addEventListener('resize', function () {
-                clearTimeout(t);
-                t = setTimeout(w, 300)
-            }, false);
-        }
-    </script>
+    <meta charset="utf-8">
+    <title>Hello, World! • A-Frame three.ar.js</title>
+    <meta name="description" content="Hello, World! • A-Frame three.ar.js">
+    <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+    <script src="https://rawgit.com/google-ar/three.ar.js/master/dist/three.ar.js"></script>
+    <script src="../dist/aframe-three-ar.js"></script>
+    <script src="https://3d.io/releases/3dio-js/1.0.x-beta/3dio.min.js"></script>
 </head>
-<body style='margin : 0px; padding: 0px; overflow: hidden;'>
-<div>
-    <form>
-        <a href="place1.html">
-            <button type="button">place1</button>
-        </a>
-    </form>
-</div>
+<body onclick="swapFurniture()">
+<a-scene three-ar vr-mode-ui="enabled:false">
+    <!-- get more furniture here https://furniture.3d.io/#furnitureId=5b130c33-e3a8-4504-92e6-0b139fa96089 -->
+    <a-entity io3d-furniture="id:5b130c33-e3a8-4504-92e6-0b139fa96089" position="0 -1.3 -2"></a-entity>
+    <a-sphere radius="0.1" color="orange" position="0 1 -2"></a-sphere>
+</a-scene>
+<script>
+    let furnitureEl = document.querySelector('a-entity[io3d-furniture]')
+    let furniture = furnitureEl.getAttribute('io3d-furniture')
+    let alternatives
+    let counter = 0
+    // get alternatives for given furniture
+    io3d.homeStaging.replaceFurniture(furniture.id, {position: furnitureEl.getAttribute('position')})
+        .then(result => {
+            alternatives = result
+        })
+
+    function swapFurniture() {
+        if (alternatives.length === 0) return
+        // set new id
+        furnitureEl.setAttribute('io3d-furniture', {id: alternatives[counter].furniture.id})
+        // set new position to center it again based on the dinemsions
+        furnitureEl.setAttribute('position', AFRAME.utils.coordinates.stringify(alternatives[counter].position))
+        counter++
+        if (counter >= alternatives.length) counter = 0
+    }
+</script>
 </body>
 </html>
