--- a/AFrame/simpleTest.html
+++ b/AFrame/simpleTest.html
@@ -6,10 +6,11 @@
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs>
     <a-assets>
-        <a-asset-item id="ALL" src="GLTF/ALL.gltf"></a-asset-item>
+        <a-asset-item id="SETs" src="GLTF/KIT_s.gltf"></a-asset-item>
     </a-assets>
     <!-- create your content here. just a box for now -->
-    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+    <a-entity gltf-model="#SETs" id="SETs_E" position="0 0.5 0" scale="0.1 0.1 0.1"></a-entity>
+<!--    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>-->
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera preset='hiro'></a-marker-camera>
 </a-scene>
