--- a/AFrame/simpleTest.html
+++ b/AFrame/simpleTest.html
@@ -9,7 +9,7 @@
         <a-asset-item id="SETs" src="GLTF/KIT_s.gltf"></a-asset-item>
     </a-assets>
     <!-- create your content here. just a box for now -->
-    <a-entity gltf-model="#SETs" id="SETs_E" position="0 0.5 0" scale="0.15 0.15 0.15"></a-entity>
+    <a-entity gltf-model="#SETs" id="SETs_E" position="0 0.5 0" scale="0.15 0.15 0.15" rotation="0 90 0"></a-entity>
 <!--    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>-->
     <!-- define a camera which will move according to the marker position -->
     <a-marker-camera preset='hiro'></a-marker-camera>
