--- a/AFrame/wtv.html
+++ b/AFrame/wtv.html
@@ -59,7 +59,7 @@
 
     <script>
         if (document.getElementById("house" != null)) {
-            document.getElementById("nextbutton").style.height = "10%";
+            document.getElementById("nextbutton").style.display = "block";
         }
     </script>
 </head>
