--- a/AFrame/wtv.html
+++ b/AFrame/wtv.html
@@ -60,6 +60,7 @@
     <script>
         if (document.getElementById("house" != null)) {
             document.getElementById("nextbutton").style.display = "block";
+            document.getElementById("nextbutton").style.fontSize = "10rem";
         }
     </script>
 </head>
