--- a/AFrame/wtv.html
+++ b/AFrame/wtv.html
@@ -58,9 +58,9 @@
     </script>
 
     <script>
-        if (document.getElementById("house" != null)) {
+        if (document.getElementById("house") != null) {
             document.getElementById("nextbutton").style.display = "block";
-            document.getElementById("nextbutton").style.fontSize = "10rem";
+            document.getElementById("nextbutton").style.fontSize = "2rem";
         }
     </script>
 </head>
