--- a/AFrame/place1.html
+++ b/AFrame/place1.html
@@ -4,28 +4,31 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
     <title>Tap to place</title>
+
+    <link rel="stylesheet" type="text/css" href="animation-mixer/index.css">
+
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     <script type="text/javascript"
             src="https://api.map.baidu.com/api?v=3.0&ak=CqubwDmuDc6oFRXAZoAkiHdqagQpreM0"></script>
-<!--    <script>-->
-<!--        AFRAME.registerComponent('navonclick', {-->
-<!--            schema: {-->
-<!--                url: {default: ''}-->
-<!--            },-->
+    <!--    <script>-->
+    <!--        AFRAME.registerComponent('navonclick', {-->
+    <!--            schema: {-->
+    <!--                url: {default: ''}-->
+    <!--            },-->
 
-<!--            init: function () {-->
-<!--                var data = this.data;-->
-<!--                var el = this.el;-->
+    <!--            init: function () {-->
+    <!--                var data = this.data;-->
+    <!--                var el = this.el;-->
 
-<!--                el.addEventListener('click', function () {-->
-<!--                    setTimeout(-->
-<!--                        function () {-->
-<!--                            window.location.href = data.url;//事件处理-->
-<!--                        }, 500)-->
-<!--                });-->
-<!--            }-->
-<!--        });-->
-<!--    </script>-->
+    <!--                el.addEventListener('click', function () {-->
+    <!--                    setTimeout(-->
+    <!--                        function () {-->
+    <!--                            window.location.href = data.url;//事件处理-->
+    <!--                        }, 500)-->
+    <!--                });-->
+    <!--            }-->
+    <!--        });-->
+    <!--    </script>-->
 
     <script>
         // Component that places trees where the ground is clicked
@@ -69,14 +72,19 @@
 
     <script>
         setInterval(function () {
-            document.getElementById("house").addEventListener("click", event=>{
-                window.location.href = "index.html"
-            })
+            if (document.getElementById("house") != null) {
+                document.getElementById("nextbutton").style.display = "block";
+                document.getElementById("nextbutton").style.fontSize = "2rem";
+            }
         }, 50)
     </script>
 </head>
 
 <body>
+<div class="nextbutton" id="nextbutton">
+    <a href="index.html">Next ></a>
+</div>
+
 <a-scene
         xrweb
         tap-place
