--- a/AFrame/place1.html
+++ b/AFrame/place1.html
@@ -63,7 +63,7 @@
                             dur: 800,
                         })
                         newElement.setAttribute('rotation', '0 0 0')
-                        newElement.setAttribute('navonclick', 'url: index.html')
+                        // newElement.setAttribute('navonclick', 'url: index.html')
                     })
                 }, {once: true})
             }
