--- a/AFrame/wtv.html
+++ b/AFrame/wtv.html
@@ -56,6 +56,14 @@
             }
         })
     </script>
+
+    <script>
+        setInterval(function () {
+            if (document.getElementById("house") != null) {
+                document.getElementById("nextbutton").style.display = "block";
+            }
+        }, 50)
+    </script>
 </head>
 
 <body>
