--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -1,70 +1,116 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>place</title>
-    <link rel="stylesheet" type="text/css" href="CSS/index.css"/>
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-    <script src="http://code.jquery.com/jquery-2.2.4.min.js"
-            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-            crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
-    <script src="JS/index.js"></script>
-    <script>
-        AFRAME.registerComponent('navigate-on-click', {
-            schema: {
-                url: {default: ''}
-            },
+    <title>8th Wall Web: Tap to place</title>
 
-            init: function () {
-                var data = this.data;
-                var el = this.el;
+    <link rel="stylesheet" type="text/css" href="animation-mixer/index.css">
 
-                el.addEventListener('click', function () {
-                    window.location.href = data.url;
-                });
-            }
-        });
-    </script>
+        <!-- We've included a slightly modified version of A-Frame, which fixes some polish concerns -->
+        <script src="//cdn.8thwall.com/web/aframe/8frame-0.8.2.min.js"></script>
+        <script src="//cdn.8thwall.com/web/aframe/aframe-animation-component-5.1.2.min.js"></script>
+        <script src="//cdn.8thwall.com/web/aframe/aframe-extras-4.2.0.min.js"></script>
+
+        <!-- XR Extras - provides utilities like load screen, almost there, and error handling.
+             See github.com/8thwall/web/xrextras -->
+        <script defer src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
+
+        <!-- 8thWall Web - Replace the app key here with your own app key -->
+        <script async
+                src="//apps.8thwall.com/xrweb?appKey=yQuHDZG37SGLBSHGZuBN9ZvLSIzCbSnU95VbYEfCAW1AtPQxxoqF5IT7QTZwuqB5UmHMBp"></script>
+
+        <script>
+            // Component that places trees where the ground is clicked
+            AFRAME.registerComponent('tap-place', {
+                init: function () {
+                    const ground = document.getElementById('ground')
+                    ground.addEventListener('click', event => {
+                        // Create new entity for the new object
+                        const newElement = document.createElement('a-entity')
+
+                        // The raycaster gives a location of the touch in the scene
+                        const touchPoint = event.detail.intersection.point
+                        newElement.setAttribute('position', touchPoint)
+
+                        const randomYRotation = Math.random() * 360
+                        newElement.setAttribute('rotation', '0 ' + randomYRotation + ' 0')
+
+                        newElement.setAttribute('visible', 'false')
+                        newElement.setAttribute('scale', '0.0001 0.0001 0.0001')
+
+                        newElement.setAttribute('gltf-model', '#KTC')
+                        this.el.sceneEl.appendChild(newElement)
+
+                        newElement.addEventListener('model-loaded', () => {
+                            // Once the model is loaded, we are ready to show it popping in using an animation
+                            newElement.setAttribute('visible', 'true')
+                            newElement.setAttribute('id', 'house')
+                            newElement.setAttribute('animation', {
+                                property: 'scale',
+                                to: '0.2 0.2 0.2',
+                                easing: 'easeOutElastic',
+                                dur: 800,
+                            })
+                        })
+                    }, {once: true})
+                }
+            })
+        </script>
+
+        <script>
+            setInterval(function () {
+                if (document.getElementById("house") != null) {
+                    document.getElementById("nextbutton").style.display = "block";
+                }
+            }, 50)
+        </script>
 </head>
 
-
 <body>
-<a-scene>
-    <a-entity id="camera" camera position="1 1.5 1" look-controls cursor="rayOrigin: mouse"></a-entity>
+
+<a href="room.html">
+    <div class="nextbutton" id="nextbutton">进入小屋</div>
+</a>
+
+<!-- We must add the tap-place component to the scene so it has an effect -->
+<a-scene
+        xrweb
+        tap-place
+        xrextras-almost-there
+        xrextras-loading
+        xrextras-runtime-error>
+
+    <!-- We can define assets here to be loaded when A-Frame initializes -->
     <a-assets>
-        <a-asset-item id="ALL" src="GLTF/ALL.gltf"></a-asset-item>
-        <a-asset-item id="SETs" src="GLTF/KIT_s.gltf"></a-asset-item>
-        <a-asset-item id="DBur" src="GLTF/DoubleBurger.gltf"></a-asset-item>
-        <a-asset-item id="CNug" src="GLTF/ChickenNuggets.gltf"></a-asset-item>
-        <a-asset-item id="CBur" src="GLTF/CheeseBurger.gltf"></a-asset-item>
+        <a-asset-item id="KTC" src="GLTF/ALL.gltf"></a-asset-item>
     </a-assets>
 
-    <!--    <a-entity gltf-model="#ALL" id="ALL_E" position="0 0 0">-->
-    <!--        <a-entity light="type: directional; color: #EEE; intensity: 0.2" position="0 10 2"></a-entity>-->
-    <!--        <a-entity light="type: spot; color: #EEE; intensity: 0.2" position="0 10 -5"></a-entity>-->
-    <!--        <a-entity light="type: ambient; color: #FFF; intensity: 1"></a-entity>-->
-    <!--&lt;!&ndash;        <a-entity gltf-model="#CBur" id="CBur_E" rotation="0 265 0" position="1 -0.008 0.2"></a-entity>&ndash;&gt;-->
-    <!--    </a-entity>-->
+    <!-- The raycaster will emit mouse events on scene objects specified with the cantap class -->
+    <a-camera
+            position="0 0 0"
+            raycaster="objects: .cantap"
+            cursor="
+          fuse: false;
+          rayOrigin: mouse;">
+    </a-camera>
 
-    <a-entity gltf-model="#SETs" id="SETs_E" position="0 0 0">
-        <a-entity light="type: directional; color: #EEE; intensity: 0.2" position="0 10 2"></a-entity>
-        <a-entity light="type: spot; color: #EEE; intensity: 0.2" position="0 10 -5"></a-entity>
-        <a-entity light="type: ambient; color: #FFF; intensity: 1"></a-entity>
-        <a-image class="js-open-box" src="img/img (1).jpg" position="1.12 1.33 0" height=".17" width=".34"
-                 navigate-on-click="url: img1.html"></a-image>
-        <a-image class="js-open-box" src="img/img (2).jpg" position="1.12 1.485 0" height=".17" width=".34"
-                 navigate-on-click="url: img2.html"></a-image>
-        <a-image class="js-open-box" src="img/img (3).jpg" position="1.12 1.64 0" height=".17" width=".34"
-                 navigate-on-click="url: img3.html"></a-image>
-        <a-image class="js-open-box" src="img/img (4).jpg" position="1.12 1.795 0" height=".17" width=".34"
-                 navigate-on-click="url: img4.html"></a-image>
+    <a-entity
+            light="type: directional;
+               intensity: 0.8;"
+            position="1 4.3 2.5">
+    </a-entity>
+
+    <a-light type="ambient" intensity="1"></a-light>
+
+    <!-- Adding the cantap class allows the ground to be clicked -->
+    <a-entity
+            id="ground"
+            class="cantap"
+            geometry="primitive: box"
+            material="color: #ffffff; transparent: true; opacity: 0.0"
+            scale="1000 2 1000"
+            position="0 -1 0">
     </a-entity>
 </a-scene>
-
-<div class="box-login">
-    这里是弹窗内容
-</div>
-
-<div class="overlay"></div>
 </body>
 </html>
