--- a/AFrame/place2.html
+++ b/AFrame/place2.html
@@ -55,7 +55,7 @@
                             easing: 'easeOutElastic',
                             dur: 800,
                         })
-                        newElement.setAttribute('navonclick', 'url: index.html')
+                        newElement.setAttribute('navonclick', 'url: room.html')
                         newElement.setAttribute('rotation', '0 0 0')
                     })
                 }, {once: true})
