--- a/AFrame/index.html
+++ b/AFrame/index.html
@@ -6,13 +6,7 @@
 
     <link rel="stylesheet" type="text/css" href="animation-mixer/index.css">
 
-    <script>
-        window.onload = function () {
-            if (!(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent))) {
-                window.location.href = "room.html"
-            }
-        };
-    </script>
+    <script src="JS/aframe-particle-system-component.min.js"></script>
 
     <!-- We've included a slightly modified version of A-Frame, which fixes some polish concerns -->
     <script src="//cdn.8thwall.com/web/aframe/8frame-0.8.2.min.js"></script>
@@ -27,7 +21,13 @@
     <script async
             src="//apps.8thwall.com/xrweb?appKey=yQuHDZG37SGLBSHGZuBN9ZvLSIzCbSnU95VbYEfCAW1AtPQxxoqF5IT7QTZwuqB5UmHMBp"></script>
 
-    <script src="JS/aframe-particle-system-component.min.js"></script>
+    <script>
+        window.onload = function () {
+            if (!(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent))) {
+                window.location.href = "room.html"
+            }
+        };
+    </script>
 
     <script>
         // Component that places trees where the ground is clicked
@@ -66,35 +66,10 @@
             }
         })
     </script>
-
-    <script>
-        setInterval(function () {
-            if (document.getElementById("house") != null) {
-                document.getElementById("nextbutton").style.display = "block";
-            }
-        }, 50)
-        function playPause() {
-            var audio = document.getElementById("bgMusic");
-            if(audio.paused){
-                audio.play();
-            }
-            else{
-                audio.pause();
-            }
-        }
-    </script>
 </head>
 
 <body>
-<audio id="bgMusic" src="JingleBells.mp3" autoplay="autoplay" loop="loop"></audio>
 
-<div id="musicPlay" onclick="playPause()">
-🎶
-</div>
-
-<a href="room.html" id="nextbutton">
-    <div class="nextbutton">进入小屋</div>
-</a>
 
 <!-- We must add the tap-place component to the scene so it has an effect -->
 <a-scene
@@ -104,6 +79,16 @@
         xrextras-loading
         xrextras-runtime-error>
 
+    <audio id="bgMusic" src="JingleBells.mp3" autoplay="autoplay" loop="loop"></audio>
+
+    <a href="javascript:" id="musicPlay" onclick="playPause()">
+        🎶
+    </a>
+
+    <a href="room.html" id="nextbutton">
+        <div class="nextbutton">进入小屋</div>
+    </a>
+    
     <a-entity position="0 2.25 -15" particle-system="preset: snow; particleCount: 5000"></a-entity>
 
     <!-- We can define assets here to be loaded when A-Frame initializes -->
@@ -118,6 +103,7 @@
             cursor="
           fuse: false;
           rayOrigin: mouse;">
+
     </a-camera>
 
     <a-entity
@@ -137,6 +123,34 @@
             scale="1000 2 1000"
             position="0 -1 0">
     </a-entity>
+
+    <script>
+        var scene = document.querySelector('a-scene');
+
+        if (scene.hasLoaded) {
+            run();
+        } else {
+            scene.addEventListener('loaded', run);
+        }
+
+        function run() {
+            setInterval(function () {
+                if (document.getElementById("house") != null) {
+                    document.getElementById("nextbutton").style.display = "block";
+                }
+            }, 50)
+        }
+
+        var audio = document.getElementById("bgMusic");
+        window.onload= audio.play();
+        function playPause() {
+            if (audio.paused) {
+                audio.play();
+            } else {
+                audio.pause();
+            }
+        }
+    </script>
 </a-scene>
 </body>
 </html>
